objects/Account.object
<CustomObject>
    <fields>
        <fullName>CC_Acct_Status__c</fullName>
        <label>CC Acct Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Untouched</fullName>
                    <default>true</default>
                    <label>Untouched</label>
                </value>
                <value>
                    <fullName>Working/No traction yet</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Opportunity__c</fullName>
        <label>CC Opportunity</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Start_Date_del__c</fullName>
        <inlineHelpText>This is the date this account first became a customer based on Opportunity History.</inlineHelpText>
        <label>CC/CT Contract Start Date</label>
        <summarizedField>Opportunity.ContractStartDate__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Closed Won - Before Acquisition</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product__c</field>
            <operation>equals</operation>
            <value>CrowdCompass,CrowdTorch</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CEnddate__c</fullName>
        <inlineHelpText>THIS IS ONLY SUPPOSED TO BE ENTERED BY CONTRACTS AND NO ONE ELSE - NEVER PUT IT AT IN PAGE LAYOUT FOR ANY PROFILE</inlineHelpText>
        <label>CEnddate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRDB_Products__c</fullName>
        <description>Do Not Delete. This field is used to architect a Customer Reference DB solution around efficient searches on "Purchased License For" multi picklist field</description>
        <externalId>true</externalId>
        <label>CRDB Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_Contract_End_Date__c</fullName>
        <label>CSN Contract End Date</label>
        <summarizedField>Opportunity.ContractEndDate__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Product__c</field>
            <operation>equals</operation>
            <value>CSN,Decision Street,EMI</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won,Closed Won - AR Settlement</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSN_Contract_Listing_End_Date__c</fullName>
        <label>CSN Contract Listing End Date</label>
        <summarizedField>Opportunity.ContractEndDate__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Closed Won - AR Settlement, Closed Won – Do Not Send to EBS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product__c</field>
            <operation>equals</operation>
            <value>CSN, Decision Street, EMI, Lanyon Group, Lanyon Passkey, Lanyon Transient</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.License_Type__c</field>
            <operation>equals</operation>
            <value>1/2 Diamond, 1 Diamond, 2 Diamond, 3 Diamond, 4 Diamond</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSN_Contract_Type__c</fullName>
        <label>CSN Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bulk Purchase By Chain</fullName>
                </value>
                <value>
                    <fullName>Bulk Purchase By Management Company</fullName>
                </value>
                <value>
                    <fullName>Bulk Purchase By Marketing/Advertising Agency</fullName>
                </value>
                <value>
                    <fullName>Bulk Purchase Multi-Property Bundle By Chain</fullName>
                </value>
                <value>
                    <fullName>Bulk Purchase Multi-Property Bundle By Management Company</fullName>
                </value>
                <value>
                    <fullName>Bulk Purchase Multi-Property Bundle By Marketing/ Advertising/Media Company</fullName>
                </value>
                <value>
                    <fullName>MSA By Chain</fullName>
                </value>
                <value>
                    <fullName>MSA By Management Company</fullName>
                </value>
                <value>
                    <fullName>MSA By Marketing/Advertising Agency</fullName>
                </value>
                <value>
                    <fullName>Multi-Property Bundle</fullName>
                </value>
                <value>
                    <fullName>One Time Multi-Property Bundle By Chain</fullName>
                </value>
                <value>
                    <fullName>One Time Purchase By Chain</fullName>
                </value>
                <value>
                    <fullName>One Time Purchase By Management Company</fullName>
                </value>
                <value>
                    <fullName>One Time Purchase By Marketing/Advertising Agency</fullName>
                </value>
                <value>
                    <fullName>One Time Purchase By Ownership Group</fullName>
                </value>
                <value>
                    <fullName>One Time Purchase Multi-Property Bundle By Marketing/ Advertising Company</fullName>
                </value>
                <value>
                    <fullName>Venue/Service</fullName>
                </value>
                <value>
                    <fullName>Venue/Service By Chain</fullName>
                </value>
                <value>
                    <fullName>Venue/Service By Management Company</fullName>
                </value>
                <value>
                    <fullName>Venue/Service By Marketing/Advertising Agency</fullName>
                </value>
                <value>
                    <fullName>Venue/Service by Ownership Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Venue or Service Code</inlineHelpText>
        <label>CSN ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSN_Listing_Type_Contract_Total__c</fullName>
        <formula>if( 
NOT(TEXT(Supplier_Status__c) ="Approved"),"N/A",
if( OR(CSN_Contract_Listing_End_Date__c  &lt;  TODAY(), CSN_Start_Date__c &gt;TODAY()) ,"Basic",if(Includes(Purchased_License__c,"RFP - 1/2 Diamond"),"1/2 Diamond", if(Includes(Purchased_License__c,"RFP - 1 Diamond"),"1 Diamond",if(Includes(Purchased_License__c,"RFP - 2 Diamond"),"2 Diamond",if(Includes(Purchased_License__c,"RFP - 3 Diamond"),"3 Diamond",if(Includes(Purchased_License__c,"RFP - 4 Diamond"),"4 Diamond","Basic")))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSN Listing Type_Contract_Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_Listing_Type__c</fullName>
        <description>This field is referenced in Price Conditons</description>
        <formula>if( 
NOT(TEXT(Supplier_Status__c) ="Approved"),"N/A", 
if( OR(CSN_Contract_Listing_End_Date__c &lt; TODAY(), CSN_Start_Date__c &gt;TODAY()) ,"Basic",if(Includes(Purchased_License__c,"RFP - 1/2 Diamond"),"1/2 Diamond", if(Includes(Purchased_License__c,"RFP - 1 Diamond"),"1 Diamond",if(Includes(Purchased_License__c,"RFP - 2 Diamond"),"2 Diamond",if(Includes(Purchased_License__c,"RFP - 3 Diamond"),"3 Diamond",if(Includes(Purchased_License__c,"RFP - 4 Diamond"),"4 Diamond","Basic")))))))

/*if( 
NOT(TEXT(Supplier_Status__c) ="Approved"),"N/A",
if( OR(CSN_Contract_Listing_End_Date__c   &lt;   TODAY(), CSN_Start_Date__c &gt;TODAY()) ,"Basic",if(Includes(Purchased_License__c,"RFP - 1/2 Diamond"),"1/2 Diamond", if(Includes(Purchased_License__c,"RFP - 1 Diamond"),"1 Diamond",if(Includes(Purchased_License__c,"RFP - 2 Diamond"),"2 Diamond",if(Includes(Purchased_License__c,"RFP - 3 Diamond"),"3 Diamond",if(Includes(Purchased_License__c,"RFP - 4 Diamond"),"4 Diamond","Basic")))))))*/</formula>
        <label>CSN Listing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_P_Account_Status__c</fullName>
        <label>CSN-P Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A - New Account</fullName>
                </value>
                <value>
                    <fullName>B - Working</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>C - Qualified</fullName>
                </value>
                <value>
                    <fullName>D - Set</fullName>
                </value>
                <value>
                    <fullName>E - CSN Funnel</fullName>
                </value>
                <value>
                    <fullName>F - Sourcing</fullName>
                </value>
                <value>
                    <fullName>G - Alt Team Working</fullName>
                </value>
                <value>
                    <fullName>H - Recycle</fullName>
                </value>
                <value>
                    <fullName>I - Trash</fullName>
                </value>
                <value>
                    <fullName>TPP - Cross Product Funnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_Planner_Start_Date__c</fullName>
        <inlineHelpText>This is the date this account first became a customer based on Opportunity History.</inlineHelpText>
        <label>CSN Planner Contract Start Date</label>
        <summarizedField>Opportunity.ContractStartDate__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Product__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.NBB_Renewal__c</field>
            <operation>equals</operation>
            <value>NBB</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Parent_Upsell__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.MYD_Deal__c</field>
            <operation>equals</operation>
            <value>First Year</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.License_Type__c</field>
            <operation>equals</operation>
            <value>CSN Planner</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSN_Serch_SEO_Link_Status__c</fullName>
        <label>Time Investment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_Start_Date__c</fullName>
        <description>CSN NBB Contract Start Date</description>
        <inlineHelpText>This is the date this account first became a customer based on Opportunity History.</inlineHelpText>
        <label>CSN Contract Start Date</label>
        <summarizedField>Opportunity.ContractStartDate__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Product__c</field>
            <operation>equals</operation>
            <value>CSN,Decision Street,EMI, Lanyon Group, Lanyon Passkey, Lanyon Transient</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Closed Won - AR Settlement, Closed Won – Do Not Send to EBS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.License_Type__c</field>
            <operation>equals</operation>
            <value>1/2 Diamond, 1 Diamond, 2 Diamond, 3 Diamond, 4 Diamond</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSN_Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSN_Status__c</fullName>
        <label>CSN Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Using</fullName>
                </value>
                <value>
                    <fullName>Not Yet Sourcing</fullName>
                </value>
                <value>
                    <fullName>Not a Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_Tier__c</fullName>
        <label>CSN Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America Platinum</fullName>
                </value>
                <value>
                    <fullName>North America Elite</fullName>
                </value>
                <value>
                    <fullName>North America Tier-1</fullName>
                </value>
                <value>
                    <fullName>North America Tier-2</fullName>
                </value>
                <value>
                    <fullName>North America Tier-3</fullName>
                </value>
                <value>
                    <fullName>LatAm Tier-1</fullName>
                </value>
                <value>
                    <fullName>LatAm Tier-2</fullName>
                </value>
                <value>
                    <fullName>Europe/UK Elite</fullName>
                </value>
                <value>
                    <fullName>Europe/UK Tier-1</fullName>
                </value>
                <value>
                    <fullName>Europe/UK Tier-2</fullName>
                </value>
                <value>
                    <fullName>Europe/UK Tier-3</fullName>
                </value>
                <value>
                    <fullName>AAMEA Elite</fullName>
                </value>
                <value>
                    <fullName>AAMEA Tier-1</fullName>
                </value>
                <value>
                    <fullName>AAMEA Tier-2</fullName>
                </value>
                <value>
                    <fullName>AAMEA Tier-3</fullName>
                </value>
                <value>
                    <fullName>LatAm Tier-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_iCreate_Report__c</fullName>
        <formula>HYPERLINK("http://is20-rss-001/ReportServer?%2FIcreate%20Reports%2FVenue%20Reports%2FVenue%20One%20Pager&amp;csnid="&amp;CSN_ID__c&amp;"&amp;month="&amp;TEXT((DATE(IF(Month(Today()) != 1,YEAR(TODAY()),YEAR(TODAY())-1),IF(Month(Today()) != 1,(MONTH(TODAY())-1),12),1)))&amp;"&amp;csnid1%3Aisnull=True&amp;rs%3AParameterLanguage=en-US","iCreate Report")</formula>
        <inlineHelpText>This report links is intended only for property level accounts, therefore there will be no link within above-property accounts.</inlineHelpText>
        <label>Venue One-Pager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Rep_Work_Status__c</fullName>
        <label>Success Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Not Working</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Adopting</fullName>
                </value>
                <value>
                    <fullName>Expanding</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Rep__c</fullName>
        <inlineHelpText>This field is no longer in use. This will eventually be removed from page layout as well. Please see Account team to see the info you need.</inlineHelpText>
        <label>CS Rep</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abbas Izhar</fullName>
                </value>
                <value>
                    <fullName>Adam Crosby</fullName>
                </value>
                <value>
                    <fullName>Adam Verma</fullName>
                </value>
                <value>
                    <fullName>Addy Anand</fullName>
                </value>
                <value>
                    <fullName>Addy Verma</fullName>
                </value>
                <value>
                    <fullName>Adrianne Carpenter</fullName>
                </value>
                <value>
                    <fullName>Adrian Saxena</fullName>
                </value>
                <value>
                    <fullName>Akshay Saluja</fullName>
                </value>
                <value>
                    <fullName>Alan Sachdeva</fullName>
                </value>
                <value>
                    <fullName>Alexa Deucher</fullName>
                </value>
                <value>
                    <fullName>Alexandra Smith</fullName>
                </value>
                <value>
                    <fullName>Alexis Petrovich</fullName>
                </value>
                <value>
                    <fullName>Alex Migdol</fullName>
                </value>
                <value>
                    <fullName>Alice Saxena</fullName>
                </value>
                <value>
                    <fullName>Alicia Bawa</fullName>
                </value>
                <value>
                    <fullName>Alyson Toole</fullName>
                </value>
                <value>
                    <fullName>Amy Remmer</fullName>
                </value>
                <value>
                    <fullName>Anand Banerjee</fullName>
                </value>
                <value>
                    <fullName>Andrew Varghese</fullName>
                </value>
                <value>
                    <fullName>Angelle Stromeyer</fullName>
                </value>
                <value>
                    <fullName>Animesh Upadhyaya</fullName>
                </value>
                <value>
                    <fullName>Anna Thapa</fullName>
                </value>
                <value>
                    <fullName>Ann OBrien</fullName>
                </value>
                <value>
                    <fullName>April Durgapal</fullName>
                </value>
                <value>
                    <fullName>Archie Menon</fullName>
                </value>
                <value>
                    <fullName>Aria Chopra</fullName>
                </value>
                <value>
                    <fullName>Arvind Kumar</fullName>
                </value>
                <value>
                    <fullName>Ashna Patial</fullName>
                </value>
                <value>
                    <fullName>Audrey Staples</fullName>
                </value>
                <value>
                    <fullName>Avinash Kumar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CStartdate__c</fullName>
        <inlineHelpText>THIS IS ONLY SUPPOSED TO BE ENTERED BY CONTRACTS AND NO ONE ELSE - NEVER PUT IT AT IN PAGE LAYOUT FOR ANY PROFILE</inlineHelpText>
        <label>CStartdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CT_Account_Status__c</fullName>
        <externalId>true</externalId>
        <label>CT-Mobile Account Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVII_ID__c</fullName>
        <description>Unique Customer ID - only for finance and SF
Exclude from field purging exercise</description>
        <label>NA CVII ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_To_Action__c</fullName>
        <inlineHelpText>Most pertinent sales strategy for the Hotel.</inlineHelpText>
        <label>Call To Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Central_Reservation_System_CRS__c</fullName>
        <description>This is requested under Case # 09922069. This field will be used by Sales team while quoting/renewing passkey products</description>
        <label>Central Reservation System (CRS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agilysys / LMS</fullName>
                </value>
                <value>
                    <fullName>Agilysys / VisualOne</fullName>
                </value>
                <value>
                    <fullName>Amadeus Hospitality (formerly iTesso) / Hotels Concepts IDPMS</fullName>
                </value>
                <value>
                    <fullName>Best Western International / LYNX</fullName>
                </value>
                <value>
                    <fullName>Carlson Rezidor Hotel Group / Curtis-C</fullName>
                </value>
                <value>
                    <fullName>Disneyland Resorts - TravelBox</fullName>
                </value>
                <value>
                    <fullName>Galaxy / LightSpeed</fullName>
                </value>
                <value>
                    <fullName>Hilton Hotels and Resorts / HCRS</fullName>
                </value>
                <value>
                    <fullName>Hilton Hotels and Resorts - PCRS</fullName>
                </value>
                <value>
                    <fullName>Hyatt Hotels and Resorts / Reserve</fullName>
                </value>
                <value>
                    <fullName>Infor / HMS</fullName>
                </value>
                <value>
                    <fullName>Infor Softbrands / Epitome</fullName>
                </value>
                <value>
                    <fullName>InterContinental Hotels Group (IHG) / HOLIDEX Plus</fullName>
                </value>
                <value>
                    <fullName>Maestro PMS - Maestro</fullName>
                </value>
                <value>
                    <fullName>Marriott International / MARSHA</fullName>
                </value>
                <value>
                    <fullName>Megasys</fullName>
                </value>
                <value>
                    <fullName>Oracle Hospitality (formerly Micros) / Opera ORS / PMS</fullName>
                </value>
                <value>
                    <fullName>Outrigger Hotels and Resorts / STELLEX</fullName>
                </value>
                <value>
                    <fullName>PAR Springer-Miller / SMS | Host</fullName>
                </value>
                <value>
                    <fullName>Protel (pending beta rollout)</fullName>
                </value>
                <value>
                    <fullName>ResortSuite</fullName>
                </value>
                <value>
                    <fullName>Sabre Hospitality Solutions / SynXis CRS</fullName>
                </value>
                <value>
                    <fullName>Starwood Hotels and Resorts / Valhalla/Direct Connect Gateway</fullName>
                </value>
                <value>
                    <fullName>TravelTripper - TravelTripper</fullName>
                </value>
                <value>
                    <fullName>Walt Disney World / DREAMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <description>This field has been re-purposed by Marketing, requested by Samridhi Kapoor in Governance Request - GR-0547</description>
        <label>Tradeshow/Exhibitor Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chain_Affiliation__c</fullName>
        <description>This field is referenced in the Quote Formula field "Chain Affiliation" which is used in Price Conditions/ Quote Term</description>
        <label>Chain Affiliation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chain_Regional_Mktg_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chain Regional Mktg. Contact # 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Regional Mktg. Contact # 1)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain_Regional_Mktg_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chain Regional Mktg. Contact # 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Regional Mktg. Contact # 2)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain_Regional_Sales_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chain Regional Sales Contact # 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Regional Sales Contact # 1)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain_Regional_Sales_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chain Regional Sales Contact # 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Regional Sales Contact # 2)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain_Scale__c</fullName>
        <label>Chain Scale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Economy Chains</fullName>
                </value>
                <value>
                    <fullName>Independents</fullName>
                </value>
                <value>
                    <fullName>Luxury Chains</fullName>
                </value>
                <value>
                    <fullName>Midscale Chains</fullName>
                </value>
                <value>
                    <fullName>Upper Midscale Chains</fullName>
                </value>
                <value>
                    <fullName>Upper Upscale Chains</fullName>
                </value>
                <value>
                    <fullName>Upscale Chains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <description>Added to support metadata API migration of PS reports from Lanyon SFDC 5-2-2017</description>
        <label>Chain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accor</fullName>
                </value>
                <value>
                    <fullName>Best Western</fullName>
                </value>
                <value>
                    <fullName>Coast Hotels</fullName>
                </value>
                <value>
                    <fullName>Corinthia Hotels</fullName>
                </value>
                <value>
                    <fullName>Dolce</fullName>
                </value>
                <value>
                    <fullName>Fairmont</fullName>
                </value>
                <value>
                    <fullName>Four Seasons</fullName>
                </value>
                <value>
                    <fullName>Hilton</fullName>
                </value>
                <value>
                    <fullName>Hyatt International</fullName>
                </value>
                <value>
                    <fullName>Hyatt N.A</fullName>
                </value>
                <value>
                    <fullName>IHG</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Magnolia</fullName>
                </value>
                <value>
                    <fullName>Marriott</fullName>
                </value>
                <value>
                    <fullName>NH Hoteles</fullName>
                </value>
                <value>
                    <fullName>Outrigger</fullName>
                </value>
                <value>
                    <fullName>Pan Pacific</fullName>
                </value>
                <value>
                    <fullName>Radisson</fullName>
                </value>
                <value>
                    <fullName>Red Lion</fullName>
                </value>
                <value>
                    <fullName>Sol Melia</fullName>
                </value>
                <value>
                    <fullName>Starwood</fullName>
                </value>
                <value>
                    <fullName>Wyndham</fullName>
                </value>
                <value>
                    <fullName>Loews Hotels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <label>Chapter Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cities_Represented_by_CVB_DMO__c</fullName>
        <label>Cities Represented by CVB/DMO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Age__c</fullName>
        <description>Indicates the number of days from the start of the NBB Contract</description>
        <formula>IF( ISNULL( CStartdate__c ), 0 , IF( ISNULL ( CEnddate__c ), TODAY()- CStartdate__c , CEnddate__c - CStartdate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please use this field determine the age or how long Client has been using Cvent</inlineHelpText>
        <label>Client Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Mood_Rating__c</fullName>
        <description>Average mood rating of all the contacts associated with this account</description>
        <label>Overall Mood (out of 5)</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Performance_Segment__c</fullName>
        <inlineHelpText>Rank and performance against top 8 Overlap Competitors</inlineHelpText>
        <label>Competitive Benchmarking</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Venue</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Artist</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparator__c</fullName>
        <formula>IF(CVII_ID__c &lt;&gt;Billing_Case__r.CVII_Number__c, False,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comparator</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>